examples/regressions/96_rebind_origin.an

origin foo =
    cast foo : U64

twice foo bar =
    origin foo
    origin bar

twice 1u8 2u16

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/96_rebind_origin.an:3:5
// 2 | origin foo =
//   |     // error: Multiple matching implicits found for type Cast _ U64 required by cast: cast_char_u64, cast_u8_u64, cast_u16_u64, cast_u32_u64, cast_usz_u64, ..
// 3 |     cast foo : U64
//   |     ^^^^
// 
// examples/regressions/96_rebind_origin.an:9:7
//  9 | twice 1u8 2u16	// error: Expected `=` to begin the function body but found `1_U8`
//    |       ^
// 
// Found 2 errors and 0 warnings

